--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "react-query-learnings",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^4.6.1",
-    "@tanstack/react-query-devtools": "^4.6.1",
-    "axios": "^0.27.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "vite": "^3.1.0"
-  }
+	"name": "react-query-learnings",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"serve-json": "json-server --watch db.json --port 4000"
+	},
+	"dependencies": {
+		"@tanstack/react-query": "^4.6.1",
+		"@tanstack/react-query-devtools": "^4.6.1",
+		"axios": "^0.27.2",
+		"json-server": "^0.17.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.4.1"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.17",
+		"@types/react-dom": "^18.0.6",
+		"@vitejs/plugin-react": "^2.1.0",
+		"vite": "^3.1.0"
+	}
 }
